@@ -8,6 +8,7 @@
 <!ENTITY modules SYSTEM "modules.xml">
 <!ENTITY search SYSTEM "search.xml">
 <!ENTITY studypad SYSTEM "studypad.xml"> 
+<!ENTITY personal SYSTEM "personal.xml">
 <!ENTITY authors SYSTEM "authors.xml">
 <!ENTITY legal SYSTEM "legal.xml">
 <!ENTITY app "GnomeSword2">
@@ -23,7 +24,7 @@
 	<bookinfo>
 		<title>GnomeSword2 Manual</title>
 		<copyright>
-			<year>2003-2004</year>
+			<year>2003-2005</year>
    	 		<holder>The GnomeSword Team</holder>
   	 	</copyright>
 		<legalnotice>
@@ -47,10 +48,24 @@
      		or initial caps.
    			</para>
   		</legalnotice>
+<abstract>
+<para>
+Gnomesword is an application to aid in study of the Bible.
 
+</para>
+</abstract>
+		<keywordset>
+<keyword>gnome</keyword>
+<keyword>gnomesword</keyword>
+<keyword>gnomesword2</keyword>
+<keyword>sword</keyword>
+<keyword>crosswire</keyword>
+<keyword>help dialog</keyword>
+</keywordset>
 <!-- this is the version of manual, not application --> 
 		<releaseinfo>This is version 2.1.1 of the GnomeSword Manual</releaseinfo>
  		</bookinfo>
+
 <!-- Document Body -->
 <!-- Introduction -->
 		&introduction;
@@ -66,6 +81,8 @@
 		&search;
 <!-- Studypad -->
 		&studypad;
+<!-- Personal Commentary -->
+		&personal;
 <!-- Authors -->
 		&authors;
 <!-- License -->
